Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-02-06 (SVN):
    * launcher: Remove hwgames_t structure whose only difference from
      h2games_t was the absence of the is_botmatch field.

2012-02-06 (SVN):
    * launcher: Fixed game selection callback functions assigning a bad
      selection. Bug was introduced in launcher-v1.0.6/uhexen2-v1.5.1.

2012-02-06 (SVN):
    * launcher: preparing for gtk3 support #1: Removed all references to
      GtkObject type. Created GTKUI_SIGNAL_DISCONNECT and similar macros
      for signals support across different gtk versions. Used the gtk2+
      function gtk_adjustment_get_value(), added a compatibility macro
      for gtk1. Added GTKUI_DISABLE_FOCUS macro and removed direct uses
      of GTK_WIDGET_UNSET_FLAGS. Limitied GtkTooltips to gtk2 and older,
      added gtk_tooltips_set_tip as a macro for gtk3 and newer. Added
      gtk_radio_button_get_group as a compatibility macro for gtk1.
      Replaced gtk_entry_set_editable calls by gtk_editable_set_editable.
      Changed adjustment widgets' types to GtkAdjustment. More to follow
      later.

2012-02-06 (SVN):
    * launcher: bumped version to 1.0.7

2012-02-06 (SVN):
    * launcher: Removed support.c and support.h. Removed calls playing
      with the widgets' refcounts for lookup_widget() of support.c which
      I never used.

2012-02-04 (SVN):
    * oslibs, dos/windows codecs: Upgrade to the latest versions of ogg-
      vorbis decoders.

2012-02-03 (SVN):
    * vid_svgalib.c: Fixed broken command line resolution matching code.
      Fixed crashes when a bad mode name is passed to -mode argument or
      set as the GSVGAMODE environment variable. If no resolutions match
      the one requested by the command line or the GSVGAMODE environment
      variable, make sure that the one picked from the existing modes
      actually exists. Set the palette after coming back from a terminal
      switching (fixes messed up colors.)
